--- a/styles/architect.css
+++ b/styles/architect.css
@@ -50,21 +50,60 @@ nav li a{
     font-weight: 800;
     color: #131313;
 }
-.banner-discription{
+.text-light-gray{
     color: #727272;
 }
 .banner img{
     margin-top: 20px;
     width: 100%;
 }
+/* main style */
+main{
+    max-width: 1440px;
+    margin: 70px auto;
+}
+/* teams style */
+.teams-container{
+    display: flex;
+    align-items: center;
+}
+.team-img-containar{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 24px;
+}
+.teams-content{
+    padding-left: 70px;
+    padding-right: 70px;
+}.teams-title{
+    font-size: 2.8rem;
+}
+.teams-title>.Quick-list{
+    color: #727272;
+    font-weight: 500px;
+}
+.teams-title .text-features{
+    color: #FF900f;
+    font-weight: 700px;
+}
+
+
 /* responsive midea quary */
 /* mobile devices */
 @media screen and (max-width: 576px){
     header{
         padding: 20px;
     }
-    nav{
+    nav ,
+    .teams-container{
         flex-direction: column;
+    }
+    .team-img-containar{
+        grid-template-columns: 1fr;
+    }
+    .teams-content{
+        padding-left: 20px;
+        padding-right: 20px;
     }
 }
 /* teblat or mideum devices */
@@ -72,7 +111,7 @@ nav li a{
     header{
         padding:20px;
     }
-    nav{
+    nav,
+    .teams-container{
         flex-direction: column;
     }
-}
