--- a/styles/architect.css
+++ b/styles/architect.css
@@ -13,6 +13,11 @@ color: #fff;
 cursor: pointer;
 border: 0;
 }
+.section-title{
+    font-size: 2.8rem;
+    font-weight: 700px;
+    color: #131313;
+}
 /* header styles */
 header{
     background: rgba(255, 144, 14, 0.10);
@@ -34,11 +39,6 @@ nav li{
 nav li a{
     text-decoration: none;
     color: #424242;
-}
-.nav-title{
-    font-size: 2.8rem;
-    font-weight: 700px;
-    color: #131313;
 }
 .banner-content{
     max-width: 800px;
@@ -86,7 +86,28 @@ main{
     color: #FF900f;
     font-weight: 700px;
 }
-
+/* facts section */
+.facts-card-conteinar{
+    display: flex;
+    justify-content: space-between;
+}
+.facts-card-conteinar .card{
+    border-radius: 8px;
+    border: 1px solid #ff900e;
+    text-align: center;
+    padding: 40px 30px;
+}
+.facts-card-conteinar .card-stats{
+    font-size: 2.8rem;
+    color: #424242;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+.facts-card-conteinar .card-title{
+    font-weight: 600;
+    font-size: 1.25rem;
+    margin-top: 5px;
+}
 
 /* responsive midea quary */
 /* mobile devices */
